crates/ddlog-syntax/tests/validation/fail/too_many_attribute_commas.rast
ROOT@0..113
  COMMENT@0..26 "// kind:item validate ..."
  WHITESPACE@26..27 "\n"
  ITEM@27..70
    FUNCTION_DEF@27..70
      ATTRIBUTES@27..52
        ATTRIBUTE@27..51
          HASH_BRACK@27..29 "#["
          ATTR_PAIR@29..40
            IDENT@29..32 "foo"
            WHITESPACE@32..33 " "
            EQ@33..34 "="
            WHITESPACE@34..35 " "
            EXPR@35..38
              VAR_REF@35..38
                IDENT@35..38 "bar"
            COMMA@38..39 ","
            COMMA@39..40 ","
          WHITESPACE@40..41 " "
          ATTR_PAIR@41..50
            IDENT@41..44 "bar"
            WHITESPACE@44..45 " "
            EQ@45..46 "="
            WHITESPACE@46..47 " "
            EXPR@47..50
              VAR_REF@47..50
                IDENT@47..50 "baz"
          R_BRACK@50..51 "]"
        WHITESPACE@51..52 "\n"
      MODIFIERS@52..52
      FUNCTION@52..60 "function"
      WHITESPACE@60..61 " "
      FUNCTION_NAME@61..64
        IDENT@61..64 "foo"
      FUNCTION_ARGS@64..66
        L_PAREN@64..65 "("
        R_PAREN@65..66 ")"
      WHITESPACE@66..67 " "
      BLOCK@67..69
        L_CURLY@67..68 "{"
        R_CURLY@68..69 "}"
      WHITESPACE@69..70 "\n"
  ITEM@70..113
    RELATION_DEF@70..113
      ATTRIBUTES@70..98
        ATTRIBUTE@70..97
          HASH_BRACK@70..72 "#["
          ATTR_PAIR@72..86
            IDENT@72..75 "foo"
            WHITESPACE@75..76 " "
            EQ@76..77 "="
            WHITESPACE@77..78 " "
            EXPR@78..81
              VAR_REF@78..81
                IDENT@78..81 "bar"
            COMMA@81..82 ","
            COMMA@82..83 ","
            COMMA@83..84 ","
            COMMA@84..85 ","
            COMMA@85..86 ","
          WHITESPACE@86..87 " "
          ATTR_PAIR@87..96
            IDENT@87..90 "bar"
            WHITESPACE@90..91 " "
            EQ@91..92 "="
            WHITESPACE@92..93 " "
            EXPR@93..96
              VAR_REF@93..96
                IDENT@93..96 "baz"
          R_BRACK@96..97 "]"
        WHITESPACE@97..98 "\n"
      MODIFIERS@98..98
      REL_KW@98..106
        RELATION@98..106 "relation"
      WHITESPACE@106..107 " "
      REL_NAME@107..110
        IDENT@107..110 "Foo"
      REL_COLS@110..112
        L_PAREN@110..111 "("
        R_PAREN@111..112 ")"
      WHITESPACE@112..113 "\n"
--
Error: too many commas between attribute pairs
   ,-[validation/fail/too_many_attribute_commas.dl:2:13]
   |
 2 | #[foo = bar,, bar = baz]
   :             |  
   :             `-- remove this comma
---'
--
Error: too many commas between attribute pairs
   ,-[validation/fail/too_many_attribute_commas.dl:4:13]
   |
 4 | #[foo = bar,,,,, bar = baz]
   :             ^^|^  
   :               `--- remove these commas
---'
--
// kind:item validate:true
#[foo = bar,, bar = baz]
function foo() {}
#[foo = bar,,,,, bar = baz]
relation Foo()
